--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -2062,24 +2062,41 @@ tags: [coding, algorithms]
 ** Solution
    #+BEGIN_SRC python
      def is_interesting(number, awesome_phrases):
-         pass
+         if number > 99:
+             pass
+         else:
+             return 0
 
-     test.describe("Basic inputs")
-     test.it("should work, dangit!")
-     tests = [
-             {'n': 3, 'interesting': [1337, 256], 'expected': 0},
-             {'n': 1336, 'interesting': [1337, 256], 'expected': 1},
-             {'n': 1337, 'interesting': [1337, 256], 'expected': 2},
-             {'n': 11208, 'interesting': [1337, 256], 'expected': 0},
-             {'n': 11209, 'interesting': [1337, 256], 'expected': 1},
-             {'n': 11211, 'interesting': [1337, 256], 'expected': 2},
-     ]
-     for t in tests:
-             test.assert_equals(is_interesting(t['n'], t['interesting']), t['expected'])
+
+     assert(is_interesting(3, [1337, 256]) == 0)
+     # test.describe("Basic inputs")
+     # test.it("should work, dangit!")
+     # tests = [
+     #         {'n': 3, 'interesting': [1337, 256], 'expected': 0},
+     #         {'n': 1336, 'interesting': [1337, 256], 'expected': 1},
+     #         {'n': 1337, 'interesting': [1337, 256], 'expected': 2},
+     #         {'n': 11208, 'interesting': [1337, 256], 'expected': 0},
+     #         {'n': 11209, 'interesting': [1337, 256], 'expected': 1},
+     #         {'n': 11211, 'interesting': [1337, 256], 'expected': 2},
+     # ]
+     # for t in tests:
+     #         test.assert_equals(is_interesting(t['n'], t['interesting']), t['expected'])
+
+     """
+     Interesting numbers are 3-or-more digit numbers that meet one or more of the following criteria:
+        
+        Any digit followed by all zeros: 100, 90000
+        Every digit is the same number: 1111
+        The digits are sequential, incementing†: 1234
+        The digits are sequential, decrementing‡: 4321
+        The digits are a palindrome: 1221 or 73837
+        The digits match one of the values in the awesomePhrases array
+        † For incrementing sequences, 0 should come after 9, and not before 1, as in 7890.
+        ‡ For decrementing sequences, 0 should come after 1, and not before 9, as in 3210.
+     """
    #+END_SRC
 
    #+RESULTS:
-   : HI there
 * #27 Finding an appointment
 ** Description
    #+BEGIN_QUOTE
