Facade function dumb design

--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -2061,6 +2061,10 @@ tags: [coding, algorithms]
 
 ** Solution
    #+BEGIN_SRC python
+
+     def num_checker(n):
+         conditions = [c1,]
+
      def is_interesting(number, awesome_phrases):
          if number > 99:
              if awesome_phrases:
