Test suite extension and additional function

--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1983,7 +1983,13 @@ tags: [coding, algorithms]
          return False
 
      assert(argument_valid(5371))
-     #assert(argument_valid(5312))
+     assert(argument_valid(5312))
+     assert(argument_valid(5661))
+
+     def rev_str_from_number(n):
+         return str(n)[::-1]
+
+     assert(rev_str_from_number(321) == '123')
 
      def next_bigger(n):
          if argument_valid(n):
