--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -2188,7 +2188,6 @@ tags: [coding, algorithms]
 
    #+RESULTS:
 
-
 * #27 Finding an appointment
 ** Description
    #+BEGIN_QUOTE
@@ -2235,3 +2234,24 @@ tags: [coding, algorithms]
      assert(get_start_time(schedules, 60) == '12:15')
      assert(get_start_time(schedules, 90) == None)
    #+END_SRC
+
+* #28 Scramblies
+
+** Description
+   #+BEGIN_QUOTE
+   Write function scramble(str1,str2) that returns true
+   if a portion of str1 characters can be rearranged to
+   match str2, otherwise returns false.
+
+   For example:
+   str1 is 'rkqodlw' and str2 is 'world' the output should
+   return true.
+   str1 is 'cedewaraaossoqqyt' and str2 is 'codewars' should
+   return true.
+   str1 is 'katas' and str2 is 'steak' should return false.
+
+   Only lower case letters will be used (a-z). No punctuation
+   or digits will be included.
+   Performance needs to be considered
+   #+END_QUOTE
+
