--- a/2016-12-17-python-metaclasses.org
+++ b/2016-12-17-python-metaclasses.org
@@ -12,6 +12,7 @@ tags: [metaclass, gist, oop]
 #+STARTUP: showall
 #+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
 #+TOC: headlines 2
+#+PROPERTY:header-args :results output :exports both :session meta
 
 * Definition
   
@@ -43,7 +44,7 @@ tags: [metaclass, gist, oop]
 
 * Classes are obects too
   And it is possible to generate them on the fly:
-  #+BEGIN_SRC python :results silent :session meta
+  #+BEGIN_SRC python :results silent
     def make_sample_class(**kw):
         return type('DemoClass', (object,), dict(**kw))
   #+END_SRC
@@ -51,7 +52,7 @@ tags: [metaclass, gist, oop]
   Built-in function =type= produce a ~DemoClass~ blueprint. Lets
   compose the class itself:
 
-  #+BEGIN_SRC python :results output :session meta :exports both
+  #+BEGIN_SRC python
     sample_class = make_sample_class(a=1, b=2)
     print(type(sample_class))
     #+END_SRC
@@ -62,7 +63,7 @@ tags: [metaclass, gist, oop]
 
   And now it is time to generate a particular instance:
   
-  #+BEGIN_SRC python :results output :session meta :exports both
+  #+BEGIN_SRC python
     instance = sample_class()
     print(type(instance))
     print("This is an instance's properties a: %s and b: %s " % 
@@ -87,7 +88,7 @@ tags: [metaclass, gist, oop]
     </p>
     #+END_EXPORT
   #+END_QUOTE
-  #+BEGIN_SRC python :results output :session meta :exports both
+  #+BEGIN_SRC python :pp
   class SampleClass(object): pass
   
   sample_object = SampleClass()
@@ -96,10 +97,11 @@ tags: [metaclass, gist, oop]
   #+END_SRC
 
   #+RESULTS:
-  : 
-  : >>> >>> <class '__main__.SampleClass'>
-  : <class 'type'>
-  
+=
+>>> >>> <class '__main__.SampleClass'>
+<class 'type'>
+=  
+
 * Metaclass
   #+BEGIN_QUOTE
   A metaclass is defined as "the class of a class". Any class whose
@@ -114,7 +116,7 @@ tags: [metaclass, gist, oop]
     </p>
     #+END_EXPORT
   #+END_QUOTE
-  #+BEGIN_SRC python :results output :pp :session meta :exports both
+  #+BEGIN_SRC python
     class Meta(object):
         meta_variable = 'zero'
 
