--- a/2016-12-17-python-metaclasses.org
+++ b/2016-12-17-python-metaclasses.org
@@ -138,6 +138,33 @@ tags: [metaclass, gist, oop]
   : zero
 
 * Metaclass's __new__ and __init__
+  #+BEGIN_SRC python
+    class MyMeta(type):
+        def __new__(meta, name, bases, dct):
+            print('-----------------------------------')
+            print("Allocating memory for class", name)
+            print(meta)
+            print(bases)
+            print(dct)
+            return super(MyMeta, meta).__new__(meta, name, bases, dct)
+        def __init__(cls, name, bases, dct):
+            print('-----------------------------------')
+            print("Initializing class", name)
+            print(cls)
+            print(bases)
+            print(dct)
+            super(MyMeta, cls).__init__(name, bases, dct)
+
+    class MyKlass(__metaclass__ = MyMeta):
+        def foo(self, param):
+            pass
+        barattr = 2
+
+  #+END_SRC
+
+  #+RESULTS:
+
+  
 * Metaclass's __call__
 
 * Examples
