--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -2266,3 +2266,16 @@ tags: [coding, algorithms]
      assert(scramble('scriptjava','javascript') == True)
      assert(scramble('scriptingjava','javascript') == 'True)
    #+END_SRC
+
+* #29 IP Validation
+
+** Description
+   #+BEGIN_QUOTE
+   Write an algorithm that will identify valid IPv4 addresses in dot-decimal format.
+   Input to the function is guaranteed to be a single string.
+
+   Examples of valid inputs: 1.2.3.4 123.45.67.89
+
+   Examples of invalid inputs: 1.2.3 1.2.3.4.5 123.456.78.90 123.045.067.089
+   #+END_QUOTE
+
