Temporarily test modification

--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -2017,6 +2017,7 @@ tags: [coding, algorithms]
      assert(next_bigger(111) == -1)
      assert(next_bigger(531) == -1)
 
+     assert(next_bigger(513) == (3, 1))
      # assert(next_bigger(12) == 21)
      # assert(next_bigger(513) == 531)
      # assert(next_bigger(2017) == 2071)
