Jekyll header reverting into previous state

--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1,4 +1,4 @@
-#+BEGIN_EXPORT html
+#+BEGIN_HTML
 ---
 layout: post
 title: Write Python programs
@@ -7,7 +7,8 @@ permalink: /coding/codewars-toy-tasks.html
 categories: [literate programming, Python, CodeWars, emacs]
 tags: [coding, algorithms]
 ---
-#+END_EXPORT
+#+END_HTML
+
 #+STARTUP: showall
 #+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
 #+TOC: headlines 2
