--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -2258,11 +2258,8 @@ tags: [coding, algorithms]
 ** Solution
    #+BEGIN_SRC python
      def scramble(s1, s2):
-         l = list(s1)
-         for i in s2:
-             try:
-                 l.pop(l.index(i))
-             except:
+         for i in set(s2):
+             if s1.count(i) < s2.count(i):
                  return False
          else:
              return True
