--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1,4 +1,4 @@
-#+BEGIN_HTML
+#+BEGIN_EXPORT html
 ---
 layout: post
 title: Write Python programs
@@ -7,7 +7,7 @@ permalink: /coding/codewars-toy-tasks.html
 categories: [literate programming, Python, CodeWars, emacs]
 tags: [coding, algorithms]
 ---
-#+END_HTML
+#+END_EXPORT
 
 #+STARTUP: showall
 #+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
@@ -15,32 +15,35 @@ tags: [coding, algorithms]
 #+PROPERTY:header-args :results output :exports both
 
 * #1 Vowels counter
-  #+BEGIN_QUOTE
-  Return the number (count) of vowels in the given string.
-  We will consider a, e, i, o, and u as vowels for this Kata.
-  #+END_QUOTE
 
-  #+BEGIN_SRC python :results output
-    def getCount(inputStr):
-        num_vowels = 0
-        # your code here
-        for letter in inputStr:
-            list_of_vowels = ['a', 'e', 'i', 'o', 'u']
-            if letter in list_of_vowels:
-                num_vowels += 1
-                #print(letter)
-                #print(num_vowels)
-        return num_vowels
+** Description
+   #+BEGIN_QUOTE
+   Return the number (count) of vowels in the given string.
+   We will consider a, e, i, o, and u as vowels for this Kata.
+   #+END_QUOTE
 
-    input_string = 'John the dully boy write this book'
+** Solution
+   #+BEGIN_SRC python :results output
+     def getCount(inputStr):
+         num_vowels = 0
+         # your code here
+         for letter in inputStr:
+             list_of_vowels = ['a', 'e', 'i', 'o', 'u']
+             if letter in list_of_vowels:
+                 num_vowels += 1
+                 #print(letter)
+                 #print(num_vowels)
+         return num_vowels
 
-    print(getCount(input_string))
-    assert(getCount(input_string) == 9)
+     input_string = 'John the dully boy write this book'
 
-  #+END_SRC
+     print(getCount(input_string))
+     assert(getCount(input_string) == 9)
 
-  #+RESULTS:
-  : 9
+   #+END_SRC
+
+   #+RESULTS:
+   : 9
 
 * #2 Last digit of a large number
   
@@ -54,9 +57,12 @@ tags: [coding, algorithms]
    #+END_SRC
 
    #+BEGIN_QUOTE
-  that takes in two numbers a and b and returns the last decimal digit of a^b. Note that a and b may be very large!
+  that takes in two numbers a and b and returns the last decimal digit of a^b.
+  Note that a and b may be very large!
 
-  For example, the last decimal digit of 9^7 is 9, since 9^7 = 4782969. The last decimal digit of (2^200)^(2^300), which has over 10^92 decimal digits, is 6.
+  For example, the last decimal digit of 9^7 is 9, since 9^7 = 4782969. The
+  last decimal digit of (2^200)^(2^300), which has over 10^92 decimal digits,
+  is 6.
 
   The inputs to your function will always be non-negative integers.
   Examples
@@ -707,7 +713,7 @@ tags: [coding, algorithms]
 
    #+RESULTS:
 
-* #6 Vigenère Autokey Cipher Helper
+* TODO #6 Vigenère Autokey Cipher Helper
 
 ** Description
    #+BEGIN_QUOTE
@@ -862,7 +868,7 @@ tags: [coding, algorithms]
     But when some particular symbol isn't in the alphabet, the shift
     is zero and this symbol not changed at all.
 
-* #7 Human readable duration format
+* DONE #7 Human readable duration format
 
 ** Description
    #+BEGIN_QUOTE
@@ -910,7 +916,7 @@ tags: [coding, algorithms]
    For the purpose of this Kata, a year is 365 days and a day is 24 hours.
    #+END_QUOTE
 
-* #8 Battleship field validator
+* TODO #8 Battleship field validator
 
 ** Description
    #+BEGIN_QUOTE
@@ -958,7 +964,7 @@ tags: [coding, algorithms]
      Test.assert_equals(validateBattlefield(battleField), True, "Yep! Seems alright", "Nope, something is wrong!");
    #+END_SRC
 
-* #9 Instant Runoff Voting
+* TODO #9 Instant Runoff Voting
 
 ** Description
    #+BEGIN_QUOTE
@@ -1033,7 +1039,7 @@ tags: [coding, algorithms]
 
    #+RESULTS:
 
-* #10 Base64 Numeric Translator
+* DONE #10 Base64 Numeric Translator
   
 ** Description
    #+BEGIN_QUOTE
@@ -1098,7 +1104,7 @@ tags: [coding, algorithms]
    For any /positional/ numeric system with base b:
    xyz = x*b**2 + y*b**1 + z*b**0
 
-* #11 Elementary Arithmetic - Carries Count
+* TODO #11 Elementary Arithmetic - Carries Count
 
 ** Description
    #+BEGIN_QUOTE
@@ -1143,7 +1149,7 @@ tags: [coding, algorithms]
      Test.assert_equals(solve("1 9\n123456789 111111101\n01 09\n11 09\n123 457"), "1 carry operations\n1 carry operations\n1 carry operations\n1 carry operations\n1 carry operations", "Try this one: (1 - 9 | 123456789 - 111111101 | 01 - 09 | 11 - 09 | 123 - 457)")
    #+END_SRC
 
-* #12 Valid Parentheses
+* DONE #12 Valid Parentheses
   
 ** Description
    #+BEGIN_QUOTE
@@ -1253,7 +1259,7 @@ tags: [coding, algorithms]
    Mismatch in parentheses order
 #+end_example
 
-* #13 Coordinates Validator
+* DONE #13 Coordinates Validator
   
 ** Description
    #+BEGIN_QUOTE
@@ -1316,7 +1322,7 @@ tags: [coding, algorithms]
          assert is_valid_coordinates(coordinate) == False,\
              "%s validation failed." % coordinate
    #+END_SRC
-* #14 Pete, the baker
+* TODO #14 Pete, the baker
 ** Description
    #+BEGIN_QUOTE
    Pete likes to bake some cakes. He has some recipes and ingredients.
@@ -1353,7 +1359,7 @@ tags: [coding, algorithms]
      # test.assert_equals(cakes(recipe, available), 0, 'Wrong result for example #2')
      assert(cakes(recipe, available) == 0)
    #+END_SRC
-* #15 Decode the Morse code
+* DONE #15 Decode the Morse code
 ** Description
    #+BEGIN_QUOTE
    In this kata you have to write a simple Morse code decoder. While
@@ -1426,7 +1432,7 @@ tags: [coding, algorithms]
      def decodeMorse(morseCode):
          return ' '.join(''.join(MORSE_CODE[letter] for letter in word.split(' ')) for word in morseCode.strip().split('   '))
    #+END_SRC
-* #16 Next bigger number with the same digits
+* TODO #16 Next bigger number with the same digits
 ** Description
    #+BEGIN_QUOTE
    You have to create a function that takes a positive integer number
@@ -1452,7 +1458,7 @@ tags: [coding, algorithms]
      Test.assert_equals(next_bigger(414),441)
      Test.assert_equals(next_bigger(144),414)
    #+END_SRC
-* #17 Simple fraction to mixed number converter
+* DONE #17 Simple fraction to mixed number converter
 ** Description
    #+BEGIN_QUOTE
    Given a string representing a simple fraction x/y, your function must return a string
@@ -1576,7 +1582,7 @@ tags: [coding, algorithms]
    #+END_SRC
 
    #+RESULTS:
-* #18 Common denominator
+* TODO #18 Common denominator
 ** Description
    #+BEGIN_QUOTE
     You will have a list of rationals in the form
