--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -2316,3 +2316,23 @@ tags: [coding, algorithms]
      assert(is_valid_IP('12.34.56.-1') == False)
      assert(is_valid_IP('123.045.067.089') == False)
    #+END_SRC
+
+* TODO #30 Matrix operations
+  
+** Description
+   Matrix rotation \pi/2 clockwise, n-times (once by default)
+
+** Solution
+   #+BEGIN_SRC python :results output
+     def matrix_rotate_clockwise(m, n):
+         return list(zip(*m[::-1]))
+
+     matrix = [ [1, 2, 3],
+                [4, 5, 6],
+                [7, 8, 9] ]
+
+     assert(matrix_rotate_clockwise(matrix, 1) ==
+            [(7, 4, 1), (8, 5, 2), (9, 6, 3)])
+            # [[0, 0, 0], [0, 0, 0], [1, 0, 0]])
+     print('Hi')
+   #+END_SRC
