List of tuples as artument test

--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -2333,6 +2333,14 @@ tags: [coding, algorithms]
 
      assert(matrix_rotate_clockwise(matrix, 1) ==
             [(7, 4, 1), (8, 5, 2), (9, 6, 3)])
-            # [[0, 0, 0], [0, 0, 0], [1, 0, 0]])
-     print('Hi')
+
+     matrix = [ (1, 2, 3),
+                (4, 5, 6),
+                (7, 8, 9) ]
+
+     assert(matrix_rotate_clockwise(matrix, 1) ==
+            [(7, 4, 1), (8, 5, 2), (9, 6, 3)]) 
    #+END_SRC
+
+   #+RESULTS:
+
