Cross-linkage test

--- a/2017-03-13-factory-design.org
+++ b/2017-03-13-factory-design.org
@@ -14,4 +14,8 @@ tags: [OOP, design, patterns, creational, factory]
 #+TOC: headlines 2
 #+PROPERTY:header-args :results output :exports both
 
-#+INCLUDE: "../python-patterns/pydepatt/patterns/creational/factory/README.org"
+* Pattern overview
+  Hope [[https://github.com/0--key/pydepatt/tree/master/patterns/creational/factory][this page]] could elucidate the same issue in a bit different
+  manner.
+
+#+INCLUDE: "../python-patterns/pydepatt/patterns/creational/factory/README.org" :lines "12-"
