--- a/2016-10-13-CV.org
+++ b/2016-10-13-CV.org
@@ -49,11 +49,13 @@ tags: [CV, Emacs, Python, Literate Programming]
 * Preamble
 
 ** Who am I
-   First of all I'm happy father, husband and man. I'm like fishing and repair things
-   out from their usual state. In most cases I've succeeded on this. I know how the
-   things work by its autopsy conclusion. There are rules in our Universe and all stuff
-   around us strictly follow these rules. The Gravity, Electricity and Nuclear Reactions
-   are kings and queens in their and our realm simultaneously.
+   First of all I'm happy father and husband. I'm like fishing and
+   repair things out from their usual state. In most cases I've
+   succeeded on this. I know how the things work by its autopsy
+   conclusion. There are rules in our Universe and all stuff around us
+   strictly follows these rules. The Gravity, Electricity and Nuclear
+   Reactions are kings and queens in their and our realm
+   simultaneously.
 
    It's an excellent case for ourselves. We already know:
     - Natural Law does exist;
@@ -63,23 +65,26 @@ tags: [CV, Emacs, Python, Literate Programming]
 
 ** What I do
 
-   I'm a data-driven person. Unconsciously I'm trying to know much details about my
-   personal environment. It's just my innate hyper-curiosity. It forces me, it inspires
-   me, it is my passion, hobby and my live-style.
+   I'm a data-driven person. Unconsciously I'm trying to know much
+   details about my personal environment. It's just my innate
+   hyper-curiosity. It forces me, it inspires me, it is my passion,
+   hobby and my live-style.
 
    Thus: *data, data, data*
 
 ** What I fun for
 
-   In the secondary school I've noticed that machines are much stronger than people.
-   The short introduction about how difficult is to enslave the iron helpers I got
-   when I learned car-driving method. It was awesome.
+   In the secondary school I've noticed that machines are much
+   stronger than people. The short introduction about how difficult is
+   to enslave the iron helpers I got when I learned car-driving
+   method. It was awesome.
 
-   But there are long time gone, and now I focused on /programming/ machines to do
-   large amount of job on incredible speed. It's partially a science, but on another
-   side it might be a sport in the same time.
+   But there are long time gone, and now I focused on /programming/
+   machines to do large amount of job on incredible speed. It's
+   partially a science, but on another side it might be a sport in the
+   same time.
 
-   Hence: *machines, speed, programming* 
+   Hence: *machines, speed, programming*
 
 * Tuition
 
@@ -125,5 +130,6 @@ tags: [CV, Emacs, Python, Literate Programming]
 * Payments
 
 * Feedback
-  Feel free to leave any comments below. It all are acceptable by default.
+  Feel free to leave any comments below. It all are acceptable by
+  default.
   
