--- a/2016-10-13-CV.org
+++ b/2016-10-13-CV.org
@@ -27,19 +27,19 @@ tags: [CV, Emacs, Python, Literate Programming]
             self.grandmother = "Russian literature teacher"
 
         def schooling(self):
-            self.succeed = "City knowledge championship in physics winner"
+            self.succeed = "Republican Physics Olympiad winner"
 
     class Engineer(Person):
-        """Technical taks solver"""
+        """Technical tasks solver"""
 
         def naval_college(self):
             self.education =  # not only a self-education, of cause
             ["area of study" : "nuclear power plants",
              "specialize on" : "technological processes automation",
-             "achievement" : "English language championship winner"]
+             "achievement" : "English language Olympiad winner"]
 
         def nuclear_power_plant(self):
-            self.job =  # as an initial experience
+            self.first_job =  # as an initial experience
             ["" : "",]
 
         def review_challenge(self, issue):
